@@ -78,7 +78,8 @@ New features of the 4.7 driver release include:
 
 - Added builder API methods for additional aggregation stages
   including :pipeline:`$search`/:pipeline:`$searchMeta` (Atlas only),
-  :pipeline:`$densify`, and :pipeline:`$fill`.
+  :pipeline:`$densify`, and :pipeline:`$fill`. Learn more about these
+  methods on the :ref:`Aggregates Builder <java-guilders-aggregates>` page.
 
 - Added the ``BsonExtraElements`` annotation that can be used with POJO encoding
   and decoding. ``BsonExtraElements`` enables decoding objects that may receive
